--- a/Print/config/IT_LLR_Sync_Data.cfg
+++ b/Print/config/IT_LLR_Sync_Data.cfg
@@ -27,7 +27,7 @@ metcov10 met_cov10 50 -1000 1000
 metcov11 met_cov11 50 0 2000
 
 # di-tau
-m_sv tauH_SVFIT_mass 30 0 300
+#m_sv tauH_SVFIT_mass 30 0 300
 deltaR_ll ditau_deltaR 50 0 5
 
 # bjets
@@ -46,7 +46,7 @@ bjet_eta_2 bjet2_eta 60 -3 3 nbjets>=2 nbjetscand>=2
 bjet_phi_2 bjet2_phi 60 -3.5 3.5 nbjets>=2 nbjetscand>=2
 #bjet_csv_2 bjet2_bID 44 -1.1 1.1 nbjets>=2 nbjetscand>=2
 bjet_deepflavour_2 bjet2_bID_deepFlavor 44 -1.1 1.1 nbjets>=2 nbjetscand>=2
-bjet_resolution_2 bjet2_JER 200 0.0 200.0 nbjets>=2 nbjetscand>=2
+#bjet_resolution_2 bjet2_JER 200 0.0 200.0 nbjets>=2 nbjetscand>=2
 
 # vbf jets
 isVBF isVBF 4 -1.5 2.5
@@ -88,7 +88,7 @@ dphi_l1MET BDT_dau1MET_deltaPhi 60 -4 4
 abs_dphi_METhtautau_sv BDT_tauHsvfitMet_abs_deltaPhi 60 -0.5 3.5 m_sv>0 tauH_SVFIT_mass>0
 dphi_METhtautau_sv BDT_tauHsvfitMet_deltaPhi 60 -4 4 m_sv>0 tauH_SVFIT_mass>0
 dphi_hbbMET BDT_bHMet_deltaPhi 60 -4 4 nbjets>=2 nbjetscand>=2
-abs_dphi_hbbhatutau_sv BDT_HHsvfit_abs_deltaPhi 60 -0.5 3.5 nbjets>=2 tauH_SVFIT_mass>0
+#abs_dphi_hbbhatutau_sv BDT_HHsvfit_abs_deltaPhi 60 -0.5 3.5 nbjets>=2 tauH_SVFIT_mass>0
 abs_deta_b1b2 dib_deltaEta 60 -3 3 nbjets>=2 nbjetscand>=2
 abs_deta_l2MET dau2_MET_deltaEta 60 -3 3
 abs_deta_hbbMET bH_MET_deltaEta 60 -3 3 nbjets>=2 nbjetscand>=2
@@ -105,7 +105,7 @@ MT2 MT2 25 0 500
 mass_top1 BDT_topPairMasses 25 0 500 nbjets>=2 nbjetscand>=2
 mass_X BDT_MX 40 200 1000 nbjets>=2 nbjetscand>=2
 mass_H BDT_bH_tauH_MET_InvMass 40 200 1000 nbjets>=2 nbjetscand>=2
-mass_H_sv BDT_bH_tauH_SVFIT_InvMass 40 200 1000 nbjets>=2 tauH_SVFIT_mass>0
+#mass_H_sv BDT_bH_tauH_SVFIT_InvMass 40 200 1000 nbjets>=2 tauH_SVFIT_mass>0
 mass_H_vis BDT_bH_tauH_InvMass 40 200 1000 nbjets>=2 nbjetscand>=2
 mass_H_kinfit_chi2 HHKin_mass_raw_chi2 80 0 50 kinfit_convergence>0 HHKin_mass_raw_convergence>0
 phi_sv BDT_total_CalcPhi 60 -4 4 m_sv>0 tauH_SVFIT_mass>0
@@ -124,8 +124,10 @@ costheta_htautau_svhhMET BDT_tauH_SVFIT_reson_cosTheta 20 -1 1 m_sv>0 tauH_SVFIT
 
 
 #SF
-#prefiringweight L1pref_weight 50 0 0.04
-#puweight PUReweight 50 0 0.04
-#btagWeight bTagweightM 50 0 2
-#leptontrigWeight trigSF 50 0 1
-#leptonidisoWeight IdAndIsoAndFakeSF 50 0.5 1
+prefiringweight L1pref_weight 50 0 0.04
+puweight PUReweight 50 0 0.04
+btagWeight bTagweightM 50 0 2
+leptontrigWeight trigSF 50 0 1
+leptonidisoWeight IdAndIsoAndFakeSF_deep_pt 50 0.5 1
+shape_weight MC_weight 50 0.5 1
+final_weight totalWeight 50 0 2
